--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 asgiref==3.8.1
+distlib==0.3.9
 Django==4.2
 djangorestframework==3.16.0
+filelock==3.18.0
 pillow==11.2.1
+pip==23.0.1
+platformdirs==4.3.8
 psycopg2-binary==2.9.9
+setuptools==65.5.0
 sqlparse==0.5.0
+typing_extensions==4.13.2
+tzdata==2025.2
+virtualenv==20.31.2
